--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,187 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
-@import "animation.css";
-*, body, html{
+@import url("https://fonts.googleapis.com/css2?family=Georama&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200;400&display=swap");
+* {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   list-style: none;
   text-decoration: none;
   scroll-behavior: smooth;
   outline: none;
   border: none;
-  /* font-family: ; */
+  font-family: 'Cairo', sans-serif;
   line-height: 1.5;
 }
+
+section {
+  width: 100%;
+}
+
+.container {
+  width: 1200px;
+  margin: auto;
+}
+
+.header_section {
+  height: 100vh;
+  background: url("../images/background/dark_bg_1.png") no-repeat center;
+  position: relative;
+  background-size: cover;
+  padding-top: 30px;
+}
+
+.header_section .container header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header_section .container header nav {
+  margin-left: 200px;
+  width: 40%;
+}
+
+.header_section .container header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header_section .container header nav ul li a {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-family: "Georama", sans-serif;
+  font-size: 20px;
+  color: white;
+}
+
+.header_section .container header nav ul li a:hover {
+  color: #cfcece;
+}
+
+.header_section .container header .logo_box {
+  width: 15%;
+}
+
+.header_section .container header .logo_box img {
+  width: 100%;
+}
+
+.header_section .container header .nav_links {
+  width: 20%;
+}
+
+.header_section .container header .nav_links a {
+  display: block;
+  text-align: center;
+}
+
+.header_section .container header .nav_links .number_link {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  padding: 10px 20px;
+  background: #fff;
+  color: #000;
+  font-size: 19px;
+}
+
+.header_section .container header .nav_links .number_link:hover {
+  background: #cfcece;
+}
+
+.header_section .container header .nav_links .text_link {
+  color: #fff;
+  margin-top: 8px;
+}
+
+.header_section .title_part {
+  width: 68%;
+  margin-left: 10%;
+  margin-top: 15%;
+}
+
+.header_section .title_part span {
+  color: white;
+  font-size: 22px;
+  font-family: "Cairo";
+}
+
+.header_section .title_part h1 {
+  font-size: 50px;
+  color: white;
+}
+
+.header_section .title_part h2 {
+  font-size: 40px;
+  font-weight: lighter;
+  color: white;
+  font-family: "Cairo";
+}
+
+.header_section .left_branch {
+  position: absolute;
+  right: 0;
+  top: 35%;
+}
+
+.place_section {
+  position: relative;
+}
+
+.place_section .text_block {
+  width: 750px;
+  margin: 120px auto;
+}
+
+.place_section .text_block h3 {
+  font-weight: 100;
+  font-size: 35px;
+  text-align: center;
+}
+
+.place_section .text_block h3 span {
+  font-weight: 700;
+}
+
+.place_section .text_block p {
+  width: 600px;
+  text-align: center;
+  margin: 40px auto;
+  font-size: 16px;
+}
+
+.place_section .left_branch {
+  position: absolute;
+  top: 10%;
+}
+
+.place_section .right_branch {
+  position: absolute;
+  top: 10%;
+  right: 0;
+}
+
+.place_section .img_block {
+  margin: 200px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.place_section .img_block img {
+  width: 375px;
+}
+/*# sourceMappingURL=style.css.map */
