--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,6 +13,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Georama&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;400&display=swap');
 $geo_font: 'Georama', sans-serif;
+$green_color:#545A2F;
 section{
   width: 100%;
 }
@@ -28,7 +29,19 @@ h3{
     font-weight: 700;
   }
 }
-
+.green_btn{
+  text-align: center;
+  a{
+    padding: 7px 50px;
+    font-size: 14px;
+    color: #fff;
+    background:$green_color ;
+    transition: 0.5s;
+    &:hover{
+      background: #363a1d;
+    }
+  }
+}
 
 
 //INDEX
@@ -250,17 +263,215 @@ margin-top: 175px;
           font-size: 14px;
           margin-bottom: 15px;
           margin-left: 25px;
+          position: relative;
           &::before{
+            position: absolute;
             content: "";
+            width: 5px;
+            height: 5px;
             background: url("../images/icons/list_item.png");
+            background-size: cover;
+            top:7px;
+            left:-10px;
           }
         }
       }
     }
   }
+  .green_btn{
+    margin-top: 70px;
+  }
 }
 }
 // WHAT WE DO SECTION
 
+// HOW ORDER SECTION
+.how_order_section{
+  margin-top: 200px;
+  .text_block{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10%;
+    margin-bottom: 25px;
+    h3{
+      text-align: left;
+    }
+  }
+  .background_block{
+    width: 100%;
+    height: 200px;
+    background: #99A18E4D;
+    display: flex;
+    align-items: center;
+    img{
+      width: 825px;
+    }
+    .form_block{
+      span{
+        font-size: 14px;
+        display: block;
+        margin-bottom: 15px;
+      }
+      #your_email{
+        width: 400px;
+        height: 30px;
+        background: white;
+        color: #63533E;
+        font-size: 14px;
+        padding-left: 15px;
+        margin-bottom: 15px;
+      }
+      #access{
+        width: 12px;
+        height: 12px;
+        border-radius: 0;
+        margin-bottom: 25px;
+      }
+      #sub_input{
+        padding: 7px 50px;
+        font-size: 14px;
+        color: #fff;
+        background:$green_color;
+        transition: 0.5s;
+        &:hover{
+          background: #363a1d;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+// HOW ORDER SECTION
+// OUR PROJECTS SECTION
+.our_projects_section{
+  margin-top: 250px;
+  .container{
+    .text_block{
+      margin-bottom: 60px;
+    }
+    .img_block{
+      position: relative;
+      display: flex;
+      width: 100%;
+      flex-wrap: wrap;
+      img{
+        width: 49%;
+        margin: 5px;
+      }
+    }
+    .fig_a{
+      position: absolute;
+      top: 48%;
+      left: 43.5%;
+      a{
+        padding: 60px 30px;
+        background: #fff;
+        border-radius: 50%;
+        color: #1A1A18;
+        &:hover{
+          background: rgb(211, 211, 211);
+        }
+      }
+    }
+  }
+}
+// OUR PROJECTS SECTION
+// FOUR STEPS SECTION
+.four_steps_section{
+  margin-top: 150px;
+  background: url("../images/background/Group\ 245.png") no-repeat;
+  background-size: 50%;
 
+.container{
+.text_block{
+  margin-bottom: 100px;
+}
+ul{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 500px;
+    margin-bottom: 110px;
+    p{
+      margin-left: 30px;
+      font-size: 16px;
+      span{
+        font-weight: 700;
+      }
+    }
+  }
+}
+}
+}
+// FOUR STEPS SECTION
+// WHY WE SECTION
+.why_we_section{
+  background: #DDE3E1;
+  padding: 65px 0;
+  .text_block{
+    margin-bottom: 90px;
+  }
+  ul{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: auto;
+    li{
+      img{
+        margin-bottom: 20px;
+        margin-left: 80px;
+      }
+      p{
+        width: 200px;
+        margin: auto;
+      }
+      width: 350px;
+      margin-bottom: 90px;
+    }
+  }
+}
+// WHY WE SECTION
+// FEEDBACK SECTION
+.feedback_section{
+  padding: 125px 0;
+  .container{
+    .text_block{
+      margin-bottom: 110px;
+    }
+    .garden_img{
+      width: 400px;
+    }
+    .slider_item{
+      display: flex;
+      width: 800px;
+      margin: auto;
+      justify-content: space-between;
+      img{
+        margin-bottom: 28px;
+      }
+      h4{
+        color: #545A2F;
+        font-size: 38px;
+        font-weight: 100;
+        margin-bottom: 8px;
+      }
+      span{
+        font-size: 20px;
+        color:#545A2F;
+        margin-bottom: 33px;
+        display: block;
+      }
+      p{
+        width: 570px;
+        font-size: 16px;
+      }
+    }
+  }
+}
+// FEEDBACK SECTION
 //INDEX
