--- a/styles/style.scss
+++ b/styles/style.scss
@@ -42,6 +42,40 @@ h3{
     }
   }
 }
+.form_block{
+  span{
+    font-size: 14px;
+    display: block;
+    margin-bottom: 15px;
+  }
+  #your_email{
+    width: 400px;
+    height: 30px;
+    background: white;
+    color: #63533E;
+    font-size: 20px;
+    padding-left: 15px;
+    margin-bottom: 15px;
+  }
+  #access{
+    width: 12px;
+    height: 12px;
+    border-radius: 0;
+    margin-bottom: 25px;
+    font-size: 20px;
+  }
+  #sub_input{
+    padding: 7px 50px;
+    font-size: 20px;
+    color: #fff;
+    background:$green_color;
+    transition: 0.5s;
+    &:hover{
+      background: #363a1d;
+      cursor: pointer;
+    }
+  }
+}
 
 
 //INDEX
@@ -306,39 +340,7 @@ margin-top: 175px;
     img{
       width: 825px;
     }
-    .form_block{
-      span{
-        font-size: 14px;
-        display: block;
-        margin-bottom: 15px;
-      }
-      #your_email{
-        width: 400px;
-        height: 30px;
-        background: white;
-        color: #63533E;
-        font-size: 14px;
-        padding-left: 15px;
-        margin-bottom: 15px;
-      }
-      #access{
-        width: 12px;
-        height: 12px;
-        border-radius: 0;
-        margin-bottom: 25px;
-      }
-      #sub_input{
-        padding: 7px 50px;
-        font-size: 14px;
-        color: #fff;
-        background:$green_color;
-        transition: 0.5s;
-        &:hover{
-          background: #363a1d;
-          cursor: pointer;
-        }
-      }
-    }
+
   }
 }
 // HOW ORDER SECTION
@@ -443,10 +445,56 @@ ul{
     .text_block{
       margin-bottom: 110px;
     }
-    .garden_img{
-      width: 400px;
-    }
-    .slider_item{
+    .slider_feedback{
+      position: relative;
+      .slick-list{
+        overflow: hidden;
+      }
+      .slick-arrow{
+        background: transparent;
+        position: absolute;
+        top: 50%;
+        font-size: 0;
+        width: 40px;
+        bottom: -60%;
+      }
+      .slick-prev{
+        right: 5%;
+        transform: rotate(180deg);
+        background: url("../images/icons/back\ copy\ 2.png") no-repeat center;
+        block-size: cover;
+      }
+      .slick-next{
+        right:0;
+        background: url("../images/icons/back\ copy\ 2.png") no-repeat center;
+        block-size: cover;
+      }
+      .slick-dots{
+        position: absolute;
+        left: 50%;;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        li{
+          margin: 10px;
+        }
+        button{
+          font-size: 0;
+          width: 12px;
+          height: 12px;
+          border: #1A1A18 1px solid;
+          border-radius: 50%;
+        }
+      }
+      .slick-active{
+        button{
+          background: #1A1A18;
+        }
+      }
+      .slider_item{
+      .garden_img{
+        width: 400px;
+      }
       display: flex;
       width: 800px;
       margin: auto;
@@ -472,6 +520,107 @@ ul{
       }
     }
   }
+  }
 }
 // FEEDBACK SECTION
+
+
+// FAQ SECTION
+.faq_section{
+  margin-top: 100px;
+  .container{
+    .wrap{
+      height: 650px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    .faq_block{
+      width: 58%;
+      .text_block{
+        h3{
+        text-align: left;
+        margin-bottom: 50px;
+      }
+      }
+    }
+    .accordion{
+      .accordion_item{
+  position: relative;
+  .accordion-item_input{
+    position: absolute;
+    top:0;
+    left:0;
+    opacity: 0;
+    &:checked ~ .accordion-item_content{
+      display: block;
+    }
+  }
+  .accordion-item_trigger{
+    display: block;
+    padding: 20px;
+    border-bottom: 1px solid #979797;
+    span{
+      font-weight: 700;
+      position: relative;
+      &:after{
+        position: absolute;
+        content: "+";
+        font-weight: 900;
+        font-size: 30px;
+        width: 10px;
+        height: 10px;
+        background: #545A2F;
+        color:#545A2F;
+        border-radius: 50%;
+      }
+    }
+  }
+  .accordion-item_content{
+    padding: 20px;
+    border-bottom: 1px solid #979797;
+    border-top:none;
+    display: none;
+  }
+}
+}
+.how_order_block{
+  width: 38%;
+  height: 100%;
+  padding: 33px 40px;
+  background: #DDE3E1;
+  display: flex;
+  flex-direction: column;
+
+  h4{
+    font-size: 25px;
+    font-weight: 100;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  span{
+    display: block;
+    text-align: center;
+  }
+  img{
+    width: 120%;
+    margin: auto;
+    margin-top: -30px;
+  }
+  .form_block{
+    margin-top: -20px;
+    width: 100%;
+    text-align: center;
+    #your_email{
+      width: 100%;
+      height: 10%;
+    }
+    #access{
+      margin-bottom: 20px;
+    }
+  }
+}
+}
+}
+}
+// FAQ SECTION
 //INDEX
