--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@ h3 span {
   margin-bottom: 15px;
 }
 
-.form_block #your_email {
+.form_block .your_email {
   width: 400px;
   height: 30px;
   background: white;
@@ -66,7 +66,7 @@ h3 span {
   margin-bottom: 15px;
 }
 
-.form_block #access {
+.form_block .access {
   width: 12px;
   height: 12px;
   border-radius: 0;
@@ -74,7 +74,7 @@ h3 span {
   font-size: 20px;
 }
 
-.form_block #sub_input {
+.form_block .sub_input {
   padding: 7px 50px;
   font-size: 20px;
   color: #fff;
@@ -83,7 +83,7 @@ h3 span {
   transition: 0.5s;
 }
 
-.form_block #sub_input:hover {
+.form_block .sub_input:hover {
   background: #363a1d;
   cursor: pointer;
 }
@@ -752,12 +752,12 @@ h3 span {
   text-align: center;
 }
 
-.faq_section .container .wrap .how_order_block .form_block #your_email {
+.faq_section .container .wrap .how_order_block .form_block .your_email {
   width: 100%;
   height: 10%;
 }
 
-.faq_section .container .wrap .how_order_block .form_block #access {
+.faq_section .container .wrap .how_order_block .form_block .access {
   margin-bottom: 20px;
 }
 
