finally index.html

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -82,7 +82,7 @@ h3{
 
 //HEADER
 .header_section{
-  height: 100vh;
+  height: 950px;
   background: url("../images/background/dark_bg_1.png") no-repeat center;
   position: relative;
   background-size: cover;
@@ -147,7 +147,7 @@ h3{
 .title_part{
   width: 68%;
   margin-left: 10%;
-  margin-top: 13%;
+  margin-top: 170px;
   span{
 color: white;
 font-size: 22px;
