--- a/styles/style.css
+++ b/styles/style.css
@@ -89,7 +89,7 @@ h3 span {
 }
 
 .header_section {
-  height: 100vh;
+  height: 950px;
   background: url("../images/background/dark_bg_1.png") no-repeat center;
   position: relative;
   background-size: cover;
@@ -172,7 +172,7 @@ h3 span {
 .header_section .title_part {
   width: 68%;
   margin-left: 10%;
-  margin-top: 13%;
+  margin-top: 170px;
 }
 
 .header_section .title_part span {
