--- a/styles/media.css
+++ b/styles/media.css
@@ -1,12 +1,109 @@
-*, body, html{
+*, body, html {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   list-style: none;
   text-decoration: none;
   scroll-behavior: smooth;
   outline: none;
   border: none;
-  /* font-family: ; */
+  font-family: 'Noah', sans-serif;
   line-height: 1.5;
 }
+
+/* INDEX TABLET AND PHONE  */
+@media (max-width: 1200px) {
+  section {
+    width: 100%;
+  }
+  .container {
+    width: 90%;
+  }
+  .place_section .img_block {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .place_section .img_block img {
+    margin-bottom: 20px;
+  }
+  .how_order_section .background_block img {
+    width: 60%;
+  }
+  .place_section .left_branch {
+    width: 30%;
+    top: 25%;
+  }
+  .place_section .right_branch {
+    width: 30%;
+    top: 25%;
+  }
+}
+
+@media (max-width: 1125px) {
+  h3 {
+    font-size: 30px;
+  }
+  .header_section {
+    height: 800px;
+  }
+  .header_section .container header .logo_box {
+    width: 20%;
+  }
+  .header_section .container header .logo_box img {
+    width: 100%;
+  }
+  .header_section .container header nav {
+    width: 50%;
+    margin: 0;
+  }
+  .header_section .container header nav ul li a {
+    font-size: 16px;
+  }
+  .header_section .container header .nav_links {
+    margin-left: 10px;
+  }
+  .header_section .container header .nav_links .number_link {
+    font-size: 14px;
+  }
+  .header_section .container header .nav_links .text_link {
+    font-size: 14px;
+  }
+  .header_section .left_branch {
+    top: 40%;
+  }
+  .header_section .title_part {
+    margin-top: 100px;
+  }
+  .header_section .title_part h1 {
+    font-size: 50px;
+  }
+  .header_section .title_part h2 {
+    font-size: 30px;
+  }
+  .proffessional_section .wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .how_order_section .background_block img {
+    width: 30%;
+  }
+  .faq_section .wrap .how_order_block .form_block .sub_input {
+    font-size: 16px;
+    padding: 0;
+  }
+  .feedback_section .text_content {
+    width: 40%;
+  }
+  .feedback_section p {
+    width: 90%;
+  }
+}
+/*# sourceMappingURL=media.css.map */
