--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Georama&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200;400&display=swap");
+@import url("./fonts.css");
 * {
   margin: 0;
   padding: 0;
@@ -10,8 +9,9 @@
   scroll-behavior: smooth;
   outline: none;
   border: none;
-  font-family: 'Cairo', sans-serif;
   line-height: 1.5;
+  font-family: 'Noah', sans-serif;
+  font-weight: 400;
 }
 
 section {
@@ -25,7 +25,7 @@ section {
 
 h3 {
   font-weight: 100;
-  font-size: 35px;
+  font-size: 40px;
   text-align: center;
 }
 
@@ -39,7 +39,7 @@ h3 span {
 
 .green_btn a {
   padding: 7px 50px;
-  font-size: 20px;
+  font-size: 25px;
   color: #fff;
   background: #545A2F;
   -webkit-transition: 0.5s;
@@ -76,7 +76,7 @@ h3 span {
 
 .form_block .sub_input {
   padding: 7px 50px;
-  font-size: 20px;
+  font-size: 23px;
   color: #fff;
   background: #545A2F;
   -webkit-transition: 0.5s;
@@ -125,7 +125,6 @@ h3 span {
 .header_section .container header nav ul li a {
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  font-family: "Georama", sans-serif;
   font-size: 20px;
   color: white;
 }
@@ -170,7 +169,7 @@ h3 span {
 }
 
 .header_section .title_part {
-  width: 68%;
+  width: 75%;
   margin-left: 10%;
   margin-top: 170px;
 }
@@ -178,19 +177,18 @@ h3 span {
 .header_section .title_part span {
   color: white;
   font-size: 22px;
-  font-family: "Cairo";
 }
 
 .header_section .title_part h1 {
-  font-size: 50px;
+  font-size: 60px;
   color: white;
+  font-weight: 700;
 }
 
 .header_section .title_part h2 {
   font-size: 40px;
   font-weight: lighter;
   color: white;
-  font-family: "Cairo";
 }
 
 .header_section .left_branch {
@@ -212,17 +210,17 @@ h3 span {
   width: 600px;
   text-align: center;
   margin: 40px auto;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .place_section .left_branch {
   position: absolute;
-  top: 10%;
+  top: 25%;
 }
 
 .place_section .right_branch {
   position: absolute;
-  top: 15%;
+  top: 30%;
   right: 0;
 }
 
@@ -311,6 +309,10 @@ h3 span {
   margin-right: 15px;
 }
 
+.proffessional_section .container .wrap .list_content ul li p {
+  font-size: 20px;
+}
+
 .proffessional_section .container .wrap .list_content ul .li_s {
   margin-top: 150px;
   margin-left: 60px;
@@ -348,12 +350,12 @@ h3 span {
 
 .what_we_do_section .container .wrap .list_item h4 {
   font-weight: 100;
-  font-size: 27px;
+  font-size: 35px;
   margin-bottom: 30px;
 }
 
 .what_we_do_section .container .wrap .list_item ul li {
-  font-size: 14px;
+  font-size: 20px;
   margin-bottom: 15px;
   margin-left: 25px;
   position: relative;
@@ -362,12 +364,12 @@ h3 span {
 .what_we_do_section .container .wrap .list_item ul li::before {
   position: absolute;
   content: "";
-  width: 5px;
-  height: 5px;
+  width: 7px;
+  height: 7px;
   background: url("../images/icons/list_item.png");
   background-size: cover;
-  top: 7px;
-  left: -10px;
+  top: 50%;
+  left: -20px;
 }
 
 .what_we_do_section .container .green_btn {
@@ -395,7 +397,7 @@ h3 span {
 
 .how_order_section .background_block {
   width: 100%;
-  height: 200px;
+  height: 250px;
   background: #99A18E4D;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -405,8 +407,24 @@ h3 span {
           align-items: center;
 }
 
+.how_order_section .background_block span {
+  font-size: 18px;
+}
+
 .how_order_section .background_block img {
   width: 825px;
+}
+
+.how_order_section .background_block .your_email {
+  font-size: 20px;
+}
+
+.how_order_section .background_block label {
+  font-size: 20px;
+}
+
+.how_order_section .background_block .sub_input {
+  margin-top: 15px;
 }
 
 .our_projects_section {
@@ -485,7 +503,7 @@ h3 span {
 
 .four_steps_section .container ul li p {
   margin-left: 30px;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .four_steps_section .container ul li p span {
@@ -528,6 +546,7 @@ h3 span {
 .why_we_section ul li p {
   width: 200px;
   margin: auto;
+  font-size: 18px;
 }
 
 .feedback_section {
@@ -566,7 +585,6 @@ h3 span {
 .feedback_section .container .slider_feedback .slick-next {
   right: 0;
   background: url("../images/icons/back copy 2.png") no-repeat center;
-  background-size: cover;
 }
 
 .feedback_section .container .slider_feedback .slick-dots {
@@ -642,7 +660,7 @@ h3 span {
 }
 
 .faq_section .container .wrap {
-  height: 545px;
+  height: 575px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -688,6 +706,7 @@ h3 span {
   padding: 20px;
   border-bottom: 1px solid #979797;
   position: relative;
+  font-size: 20px;
 }
 
 .faq_section .container .wrap .accordion .accordion_item .accordion-item_trigger span {
@@ -700,7 +719,7 @@ h3 span {
   right: 0;
   position: absolute;
   content: url("../images/icons/plus.png");
-  padding: 5px 5px 0px 5px;
+  padding: 8px 8px 0px 8px;
   border: 1px solid #545A2F;
   border-radius: 50%;
 }
@@ -715,7 +734,7 @@ h3 span {
 .faq_section .container .wrap .how_order_block {
   width: 38%;
   height: 100%;
-  padding: 33px 40px;
+  padding: 25px 40px;
   background: #DDE3E1;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -727,7 +746,7 @@ h3 span {
 }
 
 .faq_section .container .wrap .how_order_block h4 {
-  font-size: 25px;
+  font-size: 35px;
   font-weight: 100;
   text-align: center;
   margin-bottom: 10px;
@@ -736,13 +755,14 @@ h3 span {
 .faq_section .container .wrap .how_order_block span {
   display: block;
   text-align: center;
+  font-size: 18px;
 }
 
 .faq_section .container .wrap .how_order_block img {
   width: 100%;
   margin: auto;
   margin-left: 30px;
-  margin-top: -30px;
+  margin-top: -40px;
 }
 
 .faq_section .container .wrap .how_order_block .form_block {
@@ -754,10 +774,17 @@ h3 span {
 .faq_section .container .wrap .how_order_block .form_block .your_email {
   width: 100%;
   height: 10%;
+  padding: 2px 0 2px 5px;
+  font-size: 23px;
 }
 
-.faq_section .container .wrap .how_order_block .form_block .access {
-  margin-bottom: 20px;
+.faq_section .container .wrap .how_order_block .form_block .access_label {
+  font-size: 17px;
+}
+
+.faq_section .container .wrap .how_order_block .form_block .sub_input {
+  margin-top: 10px;
+  font-size: 23px;
 }
 
 .still_questions_section {
