--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,6 @@
+@import url("./fonts.css");
+
+
 *{
   margin: 0;
   padding: 0;
@@ -7,12 +10,11 @@
   scroll-behavior: smooth;
   outline: none;
   border: none;
-  font-family: 'Cairo', sans-serif;
   line-height: 1.5;
+  font-family: 'Noah', sans-serif;
+  font-weight: 400;
 }
-@import url('https://fonts.googleapis.com/css2?family=Georama&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;400&display=swap');
-$geo_font: 'Georama', sans-serif;
+
 $green_color:#545A2F;
 section{
   width: 100%;
@@ -23,7 +25,7 @@ section{
 }
 h3{
   font-weight: 100;
-  font-size: 35px;
+  font-size: 40px;
   text-align: center;
   span{
     font-weight: 700;
@@ -33,7 +35,7 @@ h3{
   text-align: center;
   a{
     padding: 7px 50px;
-    font-size: 20px;
+    font-size: 25px;
     color: #fff;
     background:$green_color ;
     transition: 0.5s;
@@ -66,7 +68,7 @@ h3{
   }
   .sub_input{
     padding: 7px 50px;
-    font-size: 20px;
+    font-size: 23px;
     color: #fff;
     background:$green_color;
     transition: 0.5s;
@@ -104,7 +106,6 @@ h3{
         li{
           a{
           transition: 0.5s;
-          font-family: $geo_font;
           font-size: 20px;
           color:white;
           &:hover{
@@ -145,23 +146,22 @@ h3{
   }
 }
 .title_part{
-  width: 68%;
+  width: 75%;
   margin-left: 10%;
   margin-top: 170px;
   span{
 color: white;
 font-size: 22px;
-font-family: "Cairo";
   }
   h1{
-    font-size:50px;
+    font-size:60px;
     color: white;
+    font-weight: 700;
   }
   h2{
     font-size: 40px;
     font-weight: lighter;
     color: white;
-    font-family: "Cairo";
   }
 }
   .left_branch{
@@ -181,16 +181,16 @@ font-family: "Cairo";
       width: 600px;
       text-align: center;
       margin: 40px auto;
-      font-size: 16px;
+      font-size: 20px;
     }
   }
   .left_branch{
     position: absolute;
-    top: 10%;
+    top: 25%;
   }
   .right_branch{
     position: absolute;
-    top: 15%;
+    top: 30%;
     right: 0;
   }
   .img_block{
@@ -253,6 +253,9 @@ font-family: "Cairo";
               width: 40px;
               margin-right: 15px;
             }
+            p{
+              font-size: 20px;
+            }
           }
           .li_s{
             margin-top: 150px;
@@ -288,24 +291,24 @@ margin-top: 175px;
       }
       h4{
         font-weight: 100;
-        font-size: 27px;;
+        font-size: 35px;;
         margin-bottom: 30px;
       }
       ul{
         li{
-          font-size: 14px;
+          font-size: 20px;
           margin-bottom: 15px;
           margin-left: 25px;
           position: relative;
           &::before{
             position: absolute;
             content: "";
-            width: 5px;
-            height: 5px;
+            width: 7px;
+            height: 7px;
             background: url("../images/icons/list_item.png");
             background-size: cover;
-            top:7px;
-            left:-10px;
+            top:50%;
+            left:-20px;
           }
         }
       }
@@ -332,14 +335,25 @@ margin-top: 175px;
   }
   .background_block{
     width: 100%;
-    height: 200px;
+    height: 250px;
     background: #99A18E4D;
     display: flex;
     align-items: center;
+    span{
+      font-size: 18px;
+    }
     img{
       width: 825px;
     }
-
+    .your_email{
+      font-size: 20px;
+    }
+    label{
+      font-size: 20px;
+    }
+    .sub_input{
+      margin-top: 15px;
+    }
   }
 }
 // HOW ORDER SECTION
@@ -399,7 +413,7 @@ ul{
     margin-bottom: 110px;
     p{
       margin-left: 30px;
-      font-size: 16px;
+      font-size: 18px;
       span{
         font-weight: 700;
       }
@@ -430,6 +444,7 @@ ul{
       p{
         width: 200px;
         margin: auto;
+        font-size: 18px;
       }
       width: 350px;
       margin-bottom: 90px;
@@ -466,7 +481,6 @@ ul{
       .slick-next{
         right:0;
         background: url("../images/icons/back\ copy\ 2.png") no-repeat center;
-        background-size: cover;
       }
       .slick-dots{
         position: absolute;
@@ -529,7 +543,7 @@ ul{
   margin-top: 100px;
   .container{
     .wrap{
-      height: 545px;
+      height: 575px;
       width: 100%;
       display: flex;
       justify-content: space-between;
@@ -559,12 +573,14 @@ ul{
       width: 22px;
       height: 28px;
     }
+
   }
   .accordion-item_trigger{
     display: block;
     padding: 20px;
     border-bottom: 1px solid #979797;
     position: relative;
+    font-size: 20px;
     span{
       font-weight: 700;
       cursor: pointer;
@@ -573,7 +589,7 @@ ul{
         right: 0;
         position: absolute;
         content: url("../images/icons/plus.png");
-        padding: 5px 5px 0px 5px;
+        padding: 8px 8px 0px 8px;
         border: 1px solid #545A2F;
         border-radius: 50%;
       }
@@ -590,13 +606,13 @@ ul{
 .how_order_block{
   width: 38%;
   height: 100%;
-  padding: 33px 40px;
+  padding: 25px 40px;
   background: #DDE3E1;
   display: flex;
   flex-direction: column;
 
   h4{
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 100;
     text-align: center;
     margin-bottom: 10px;
@@ -604,12 +620,13 @@ ul{
   span{
     display: block;
     text-align: center;
+    font-size: 18px;
   }
   img{
     width: 100%;
     margin: auto;
     margin-left: 30px;
-    margin-top: -30px;
+    margin-top: -40px;
   }
   .form_block{
     margin-top: -20px;
@@ -618,9 +635,15 @@ ul{
     .your_email{
       width: 100%;
       height: 10%;
+      padding: 2px 0 2px 5px;
+      font-size: 23px;
     }
-    .access{
-      margin-bottom: 20px;
+    .access_label{
+      font-size: 17px;
+    }
+    .sub_input{
+      margin-top: 10px;
+      font-size: 23px;
     }
   }
 }
